# transmission

./: CMakeLists.txt
.github/workflows/: actions.yml
cert/: cert.pem  key.pem
cli/: CMakeLists.txt
cmake/: FindEVENT2.cmake  TrMacros.cmake
daemon/: CMakeLists.txt
gtk/: CMakeLists.txt
libtransmission/: CMakeLists.txt  log.cc  peer-mgr-wishlist.cc  platform.cc  quark.cc  quark.h  rpc-server.cc  rpc-server.h
macosx/: Controller.mm
qt/: Prefs.cc  Prefs.h
ssltest/: CMakeLists.txt  ssltest.cc
tests/libtransmission/: CMakeLists.txt
utils/: CMakeLists.txt
